manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "contosovideo-437d"
    labels:
        app: "contosovideo-437d"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: contoso-videobb16-contosovideo-437d.1f830033e219418eb0a2.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "contosovideo-437d"
                servicePort: 80
